# vala-bootstrap

./: ChangeLog  Makefile.in  aclocal.m4  configure  configure.ac  vala-bootstrap.doap
ccode/: Makefile.am  Makefile.in
codegen/: Makefile.am  Makefile.in  codegen.vapi  valaccodeassignmentmodule.c  valaccodeattribute.c  valaccodebasemodule.c  valaccodecontrolflowmodule.c  valaccodedelegatemodule.c  valaccodememberaccessmodule.c  valaccodemethodcallmodule.c  valaccodemethodmodule.c  valaccodestructmodule.c  valacodegen.h  valagasyncmodule.c  valagirwriter.c  valagobjectmodule.c  valagtypemodule.c  valagvariantmodule.c
compiler/: Makefile.am  Makefile.in  valacompiler.c
doc/: Makefile.in
doc/vala/: Makefile.in
gee/: Makefile.am  Makefile.in  hashmap.c  map.c  mapiterator.c
gobject-introspection/: Makefile.in  scannerparser.c  scannerparser.h
tests/: Makefile.in
vala/: Makefile.am  Makefile.in  vala.h  vala.vapi  valaarraytype.c  valaassignment.c  valacastexpression.c  valacomment.c  valadatatype.c  valageniescanner.c  valagircomment.c  valagirparser.c  valainitializerlist.c  valamarkupreader.c  valamemberaccess.c  valamethod.c  valaparameter.c  valaparser.c  valaproperty.c  valascanner.c  valasizeofexpression.c  valatypecheck.c  valatypeofexpression.c
vapi/: Makefile.in  libvala-0.16.vapi
vapigen/: Makefile.am  Makefile.in  valagidlparser.c
vapigen/vala-gen-introspect/: Makefile.in
